--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dayplug.movieticket">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true"/>
+
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieTicket">
-        <activity android:name=".SelectChairActivity"></activity>
-        <activity android:name=".onboarding.OnBoardingOneActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".auth.SignUpPhotoActivity" />
-        <activity android:name=".auth.SignUpActivity" />
-        <activity android:name=".auth.SignInActivity" />
-        <activity android:name=".onboarding.OnBoardingThreeActivity" />
-        <activity android:name=".onboarding.OnBoardingTwoActivity" />
-        <activity android:name=".SplashScreenActivity" />
-        <activity android:name=".CheckoutActivity">
+        <activity android:name=".view.SelectChairActivity"/>
+        <activity android:name="com.dayplug.movieticket.view.onboarding.OnBoardingOneActivity" />
+        <activity android:name=".view.DetailActivity" />
+        <activity android:name=".view.HomeActivity" />
+        <activity android:name="com.dayplug.movieticket.view.auth.SignUpPhotoActivity" />
+        <activity android:name="com.dayplug.movieticket.view.auth.SignUpActivity" />
+        <activity android:name="com.dayplug.movieticket.view.auth.SignInActivity" />
+        <activity android:name="com.dayplug.movieticket.view.onboarding.OnBoardingThreeActivity" />
+        <activity android:name="com.dayplug.movieticket.view.onboarding.OnBoardingTwoActivity" />
+        <activity android:name=".view.CheckoutActivity" />
+        <activity android:name=".view.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
