Update logic and layout
+ Homepage
+ Detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieTicket">
-        <activity android:name=".view.PaymentSuccessActivity"></activity>
+        <activity android:name=".view.TicketActivity"></activity>
+        <activity android:name=".view.PaymentSuccessActivity" />
         <activity android:name=".view.SelectChairActivity" />
         <activity android:name=".view.onboarding.OnBoardingOneActivity" />
         <activity android:name=".view.DetailActivity" />
@@ -38,14 +39,14 @@
                 android:resource="@xml/file_paths" />
         </provider>
     </application>
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
